--- a/Index.html
+++ b/Index.html
@@ -58,7 +58,7 @@
           <div class="p-3 pt-0 d-flex flex-column align-items-end card-text-space mr-auto text-font text-center text-white"
           style="top:50%">
             <h1 class="w-100 display-4">Windows</h1>
-            <p class="">семейство проприетарных операционных систем корпорации Microsoft, ориентированных на применение графического интерфейса при управлении.</p>
+            <p class="">Cемейство проприетарных операционных систем корпорации Microsoft, ориентированных на применение графического интерфейса при управлении...</p>
             <a href="./Windows/windows.html" class="btn btn-primary  align-self-center" >Узнать больше</a>
           </div>
         </div>
@@ -66,7 +66,7 @@
         <div class=" apple border-0 p-5" >
           
           <div class="p-3 pt-0 d-flex flex-column align-items-end card-text-space ml-auto text-font text-center text-white">
-            <h1 class="w-100 display-4 mb-3" style="letter-spacing: 4px;">macOs</h5>
+            <h1 class="w-100 display-4 mb-3" style="letter-spacing: 4px;">macOS</h5>
             <p class="">
               Операционная система macOS — основа каждого Mac. Система создавалась специально для Mac, и вместе они работают как одно целое.
               В неё интегрированы функции iCloud для синхронизации файлов и документов между устройствами...
@@ -102,21 +102,23 @@
         <img src="./Windows/WindowsLogos/bigwindows960.png" alt="windows" class="responsive">
         <div class="text-center p-3  intText ">
           <h1 class="display-4 ">Windows</h1>
-          <p class="pt-3 pb-1 mb-2">Windows (с англ. — «Окна») — семейство коммерческих операционных систем (OC) корпорации Microsoft, ориентированных на управление с помощью графического интерфейса. Изначально Windows была всего лишь графической программой-надстройкой для распространённой в 1980-х и 1990-х годах операционной системы MS-DOS. Согласно данным ресурса Net Applications</p>
+          <p class="pt-3 pb-1 mb-2">Cемейство проприетарных операционных систем корпорации Microsoft, ориентированных на применение графического интерфейса при управлении...</p>
           <a href="./Windows/windows.html" class="btn btn-primary">Узнать больше</a>
         </div>
 
         <img src="./MacOS/AppleLogos/AppleLogo1200.jpg" alt="windows" class="responsive">
         <div class="text-center p-3  intText">
-          <h1 class="display-4 ">Windows</h1>
-          <p class="pt-3 pb-1 mb-2">Windows (с англ. — «Окна») — семейство коммерческих операционных систем (OC) корпорации Microsoft, ориентированных на управление с помощью графического интерфейса. Изначально Windows была всего лишь графической программой-надстройкой для распространённой в 1980-х и 1990-х годах операционной системы MS-DOS. Согласно данным ресурса Net Applications</p>
+          <h1 class="display-4 ">macOS</h1>
+          <p class="pt-3 pb-1 mb-2">Операционная система macOS — основа каждого Mac. Система создавалась специально для Mac, и вместе они работают как одно целое.
+            В неё интегрированы функции iCloud для синхронизации файлов и документов между устройствами...</p>
           <a href="./MacOS/macOS.html" class="btn btn-primary">Узнать больше</a>
         </div>
 
         <img src="./Linux/LinuxLogos/LinuxTel.jpg" alt="windows" class="responsive">
         <div class="text-center p-3  intText">
-          <h1 class="display-4 ">Windows</h1>
-          <p class="pt-3 pb-1 mb-2">Windows (с англ. — «Окна») — семейство коммерческих операционных систем (OC) корпорации Microsoft, ориентированных на управление с помощью графического интерфейса. Изначально Windows была всего лишь графической программой-надстройкой для распространённой в 1980-х и 1990-х годах операционной системы MS-DOS. Согласно данным ресурса Net Applications</p>
+          <h1 class="display-4 ">Linux</h1>
+          <p class="pt-3 pb-1 mb-2">Linux - это многозадачная и многопользовательская операционная система для бизнеса, образования и индивидуального программирования.
+            Linux принадлежит семейству UNIX-подобных операционных систем. Она поддерживает широкий спектр программных пакетов и протоколов....</p>
           <a href="./Linux/linux.html" class="btn btn-primary">Узнать больше</a>
         </div>
         
